<resources>
    <string name="app_name">Eco 101</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_start">startActivity</string>
    <string name="nova_sess_o">Nova Sessão</string>
    <string name="por_favor_selecione_a_op_o_desejada">Por favor, selecione a opção desejada:</string>
    <string name="continuar_sess_o">Continuar Sessão</string>
    <string name="encerrar_sess_o">Encerrar Sessão</string>
    <string name="limpar_sess_o">Limpar Sessão</string>
    <string name="por_favor_selecione_uma_op_o">Por favor, selecione uma opção:</string>
    <string name="continuar">Continuar</string>
    <string name="title_activity_new_session">newSessionActivity</string>
    <string name="fazer_download_e_continuar">Fazer Download e Continuar</string>
    <string name="title_activity_continue_session">ContinueSessionActivity</string>
    <string name="title_activity_close_session">CloseSessionActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="login">Login</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="ponto_1">Ponto 1</string>
    <string name="_0_0">0,0</string>
    <string name="title_activity_home">Home</string>
    <string name="escolha_uma_op_o">Escolha uma opção:</string>
    <string name="novo_cadastro">Novo Cadastro</string>
    <string name="editar_cadastro">Editar Cadastro</string>
    <string name="enviar_cadastros">Enviar Cadastros</string>
    <string name="excluir_cadastro">Excluir Cadastro</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_cadastro">Cadastro</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_benfeitoria">Benfeitorias</string>
    <string name="title_activity_plantacao">Plantações</string>
    <string name="title_activity_mapping">Mapa</string>
    <string name="title_activity_documentos">DocumentosActivity</string>
    <string name="title_activity_create_prop_cadastro">CreatePropCadastroActivity</string>
</resources>
